syntax = "proto3";

package orchestrator;

import "datamanager.proto";

option go_package = "github.com/substra/orchestrator/lib/asset";

// Dataset references several related samples
message Dataset {
  DataManager data_manager = 1;
  repeated string data_sample_keys = 2;
}

message GetDatasetParam {
  string key = 1;
}

service DatasetService {
  rpc GetDataset(GetDatasetParam) returns (Dataset);
}
